# flaccrunch

./: .gitignore  CHANGELOG.md  README.md  Start-ExactFlacCrunch.ps1  _argtest.ps1  build.ps1  index.html  make_icon.py  package-lock.json  package.json  vite.config.ts
.claude/: settings.json  settings.local.json
.github/workflows/: ci.yml  release.yml
Tests/: Start-ExactFlacCrunch.Tests.ps1
src/: App.css  App.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/android-patches/: AndroidBridgePlugin.kt  DialogPlugin.kt  MainActivity.kt
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: android_bridge.rs  cli.rs  lib.rs  main.rs
src-tauri/src/artwork/: extract.rs  mod.rs  optimize.rs
src-tauri/src/commands/: folders.rs  logs.rs  mod.rs  processing.rs  settings.rs
src-tauri/src/flac/: encoder.rs  hasher.rs  marker.rs  metadata.rs  mod.rs  progress.rs
src-tauri/src/fs/: metadata.rs  mod.rs  scanner.rs  tempfile.rs
src-tauri/src/image/: detect.rs  jpeg.rs  mod.rs  png.rs
src-tauri/src/logging/: efc_log.rs  failed_log.rs  mod.rs  run_log.rs
src-tauri/src/pipeline/: job.rs  mod.rs  queue.rs  stages.rs  worker_pool.rs
src-tauri/src/sidecar/: resolve.rs
src-tauri/src/state/: app_state.rs  mod.rs  run_state.rs  settings.rs
src-tauri/src/util/: format.rs  platform.rs
src/hooks/: useProcessing.test.ts  useProcessing.ts  useSettings.test.ts  useSettings.ts  useTheme.ts  useWindowTitle.test.ts  useWorkerStatus.test.ts  useWorkerStatus.ts
src/lib/: format.test.ts  format.ts  (+2 more)
(+34 files in other folders)
