[package]
name = "flaccrunch"
version = "1.0.10"
description = "Lossless FLAC recompression with album art optimization"
authors = ["FlacCrunch Contributors"]
edition = "2021"

[lib]
name = "flaccrunch_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-store = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
md-5 = "0.10"
sha2 = "0.10"
oxipng = "9"
zune-jpeg = "0.4"
jpeg-encoder = "0.6"
walkdir = "2"
url = "2"
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
directories = "6"
num_cpus = "1"
libc = "0.2"
libflac-sys = { version = "0.3", default-features = false, features = ["build-flac"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = "thin"
codegen-units = 1
